<resources>
    <string name="app_name">Hotel Managment</string>
    <string name="personal_information_title_text">Title*</string>
    <string name="personal_info_fname_hintText">First Name*</string>
    <string name="personal_info_middleName_hintText">Middle Name</string>
    <string name="personal_info_lastName_hintText">Last Name*</string>
    <string name="personal_info_email_hintText">Email Address*</string>
    <string name="peronal_info_emailConfirmation_hintText">Retype Email Address*</string>
    <string name="personal_info_createNewAccount_CBText">Create New Account</string>
    <string name="personal_info_gender_text">Gender*</string>
    <string name="personal_info_continue_buttonText">Continue</string>
    <string-array name="title">
        <item>MR</item>
        <item>MS</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <integer-array name="beds">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
    </integer-array>

    <string-array name="breakfast">
        <item>Milk</item>
        <item>Scrambled Egg</item>
    </string-array>

    <string-array name="lunch">
        <item>Salad</item>
        <item> Sandwich</item>
    </string-array>
    <string name="book">BOOK</string>
    <string name="address_info_companyName_hint">Company Name</string>
    <string name="address_info_city_hintText">City*</string>
    <string name="address_info_postaCode_hintText">Postal Code*</string>
    <string name="address_info_daytimePhone_hintText">Day Time Phone*</string>
    <string name="address_info_mobileEt_hintText">Mobile Phone</string>
    <string name="address_info_address_hintText">Address*</string>
    <string name="address_info_country_text">Country*</string>
    <string name="address_info_continueButton_text">Continue</string>
    <string name="additional_info_commentsET">Comments</string>
    <string name="additional_info_bussiness_radioText">Bussiness</string>
    <string name="additional_info_leisure_radioText">Leisure</string>
    <string name="additional_info_button_text">Submit</string>
    <string name="client">Client</string>
    <string name="manager_screen_toolbar_title">Manager</string>
    <string name="employee_recyclerview_employeename_text">Name</string>
    <string name="employee_recyclerview_pay_text">Pay</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="customer">Customer</string>
    <string name="manager">Manager</string>
    <string name="add_room">Add Room</string>
    <string name="add_room_information">Add Room Information</string>
    <string name="how_many_beds">How many beds</string>
    <string name="room_number">Room Number</string>
    <string name="room_number2">Room Number:</string>
    <string name="customer_id">Customer ID:</string>
    <string name="customer_name">Customer Name</string>
    <string name="booked_room_edit_degreeOfLightsTVTitle">Degree of Lights</string>
    <string name="turnTvTitle_text">TV</string>
    <string name="meals_title_text">Meals</string>
    <string name="editMealsText">Edit</string>
    <string name="breakfast_tv_text">Break Fast</string>
    <string name="lunchTv_text">Lunch</string>
    <string name="dinnerTv_text">Dinner</string>
    <string name="checkinButton_text">Check In</string>
    <string name="checkoutButton_text">Check Out</string>
    <string name="addEmployee_Name_text">First Name</string>
    <string name="addEmployee_address_text">Address</string>
    <string name="addEmployee_phone_text">Enter Mobile Number</string>
    <string name="addEmployee_salary_text">Salary</string>
    <string name="addEmployee_design_text">Designation</string>
    <string name="addEmployee_submit_text">Submit</string>
    <string name="addEmployee_cancel_text">Cancel</string>
    <string name="technologies_used">
        Technologies Used:\n\n
        Retrofit \n
        Finger Print Authentication \n
        RealTime FireBase DataBase \n
        Room Database \n
        RecyclerView \n
        Custom Calendar \n
        Tab Layout \n
        Dagger 2 \n
        ButterKnife \n
    </string>
    <string name="fname_error_register">Invalid First Name</string>
    <string name="lname_error_register">Invalid Last Name</string>
    <string name="email_error_register">Invalid  Email Address</string>
    <string name="mobile_error_register">Invalid Mobile Number</string>
    <string name="company_name_register">Invalid Address</string>
    <string name="city_name_register">Invalid Address</string>
    <string name="mobile_number_register">Invalid Phone Number</string>
</resources>
