<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/customer"
        android:title="@string/customer"
        android:orderInCategory="0"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/manager"
        android:title="@string/manager"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/addRoom"
        android:title="@string/add_room"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/techUsed"
        android:title="Technologies Used"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

</menu>