<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/address_info_companyNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:ems="10"
        android:padding="@dimen/viewPadding"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:hint="@string/address_info_companyName_hint" />

    <EditText
        android:id="@+id/address_info_addressET"
        android:layout_width="match_parent"
        android:layout_height="@dimen/address_info_addressET_height"
        android:gravity="top"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/address_info_address_hintText"
        android:inputType="textMultiLine"
        android:padding="@dimen/viewPadding" />

    <EditText
        android:id="@+id/address_info_cityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:ems="10"
        android:padding="@dimen/viewPadding"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:hint="@string/address_info_city_hintText" />
    <EditText
        android:id="@+id/address_info_postalCodeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:ems="10"
        android:padding="@dimen/viewPadding"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:hint="@string/address_info_postaCode_hintText" />
    <TextView
        android:id="@+id/address_info_CountryTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:text="@string/address_info_country_text" />

    <Spinner
        android:id="@+id/address_info_countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        />
    <EditText
        android:id="@+id/address_info_datTimePhoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:ems="10"
        android:padding="@dimen/viewPadding"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:hint="@string/address_info_daytimePhone_hintText" />

    <EditText
        android:id="@+id/address_info_mobilePhoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:ems="10"
        android:padding="@dimen/viewPadding"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:hint="@string/address_info_mobileEt_hintText" />
    <Button
        android:id="@+id/address_info_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/viewPadding"
        android:layout_marginTop="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginBottom="@dimen/personal_information_view_marginTopBottom"
        android:layout_marginLeft="@dimen/personal_information_view_marginLeftRight"
        android:layout_marginRight="@dimen/personal_information_view_marginLeftRight"
        android:background="@drawable/button_bg_gradient"
        android:textColor="@color/colorButtonText"
        android:text="@string/address_info_continueButton_text" />
</LinearLayout>
</ScrollView>